[BACKLOG-21800] JMS Consumer.  Initial commit
Includes stream source impl, meta, and dialog components.

https://jira.pentaho.com/browse/BACKLOG-21800

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -74,6 +74,7 @@
         <module>ms-access-bulk-loader</module>
         <module>xml</module>
         <module>google-cloud-storage-vfs</module>
+        <module>jms</module>
       </modules>
     </profile>
 
