wip - Changes to assembly to load the artemis features.
NOTE:  even with this change, the artemis-jms-client-osgi bundle has
a missing dependency on sun.misc (error below).
Seems odd that a sun package would
be a required dependency.  As a test I cracked open the bundle and
modified the manifest to mark sun.misc optional, after which I which
the feature would load and I was able to consume records
from ActiveMQ artemis.

We may need to do some karaf trickery to wrap or modify the bundle
to eliminate the sun.misc dependence.

Could not start bundle mvn:org.apache.activemq/artemis-jms-client-osgi/2.5.0 in feature(s) artemis-jms-client-2.5.0: Unresolved constraint in bundle org.apache.activemq.artemis-jms-client-osgi [403]: Unable to resolve 403.0: missing requirement [403.0] osgi.wiring.package; (osgi.wiring.package=sun.misc)

--- a/plugins/streaming/impls/jms/pom.xml
+++ b/plugins/streaming/impls/jms/pom.xml
@@ -77,6 +77,35 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>artemis-jms-client</artifactId>
+      <scope>provided</scope>
+      <version>2.5.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>artemis-core-client</artifactId>
+      <scope>provided</scope>
+      <version>2.5.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>artemis-commons</artifactId>
+      <scope>provided</scope>
+      <version>2.5.0</version>
+    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>com.sun.jndi</groupId>-->
+      <!--<artifactId>providerutil</artifactId>-->
+      <!--<version>1.2</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>com.sun.jndi</groupId>-->
+      <!--<artifactId>fscontext</artifactId>-->
+      <!--<version>RELEASE</version>-->
+    <!--</dependency>-->
+
+    <dependency>
       <groupId>io.reactivex.rxjava2</groupId>
       <artifactId>rxjava</artifactId>
       <version>${rxjava.version}</version>
@@ -87,6 +116,7 @@
       <artifactId>javax.jms-api</artifactId>
       <version>${jms.version}</version>
     </dependency>
+
 
     <dependency>
       <groupId>org.mockito</groupId>
@@ -100,11 +130,39 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+
+
+
   </dependencies>
 
 
   <build>
+
+
     <plugins>
+      <!--<plugin>-->
+        <!--<groupId>org.apache.maven.plugins</groupId>-->
+        <!--<artifactId>maven-shade-plugin</artifactId>-->
+        <!--<version>3.1.0</version>-->
+        <!--<executions>-->
+          <!--<execution>-->
+            <!--<phase>package</phase>-->
+            <!--<goals>-->
+              <!--<goal>shade</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+              <!--<artifactSet>-->
+                <!--<includes>-->
+                  <!--<include>org.apache.activemq:artemis-jms-client</include>-->
+                  <!--<include>org.apache.activemq:artemis-commons</include>-->
+                <!--</includes>-->
+              <!--</artifactSet>-->
+              <!--<createDependencyReducedPom>false</createDependencyReducedPom>-->
+            <!--</configuration>-->
+          <!--</execution>-->
+        <!--</executions>-->
+      <!--</plugin>-->
+
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
@@ -116,7 +174,7 @@
             <Bundle-Version>${project.version}</Bundle-Version>
             <Export-Package>org.pentaho.di.trans.step.jms.*;version=${project.version}</Export-Package>
             <Import-Package>
-              com.ibm.msg.client.wmq;resolution:=optional,com.ibm.mq.jms;resolution:=optional,org.eclipse.swt*;resolution:=optional,org.pentaho.di.osgi,org.pentaho.di.core.plugins,*
+              javax.jms,javax.naming,com.ibm.msg.client.wmq;resolution:=optional,com.ibm.mq.jms;resolution:=optional,org.eclipse.swt*;resolution:=optional,org.pentaho.di.osgi,org.pentaho.di.core.plugins,*
             </Import-Package>
           </instructions>
         </configuration>
