--- a/plugins/streaming/assemblies/feature/pom.xml
+++ b/plugins/streaming/assemblies/feature/pom.xml
@@ -32,6 +32,15 @@
       <artifactId>pentaho-streaming-mqtt-plugin</artifactId>
       <version>${project.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>artemis-features</artifactId>
+      <version>2.5.0</version>
+      <type>xml</type>
+      <classifier>features</classifier>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -41,7 +50,29 @@
         <artifactId>karaf-maven-plugin</artifactId>
         <version>${karaf-maven-plugin.version}</version>
         <extensions>true</extensions>
+        <dependencies>
+          <dependency>
+            <groupId>biz.aQute.bnd</groupId>
+            <artifactId>bndlib</artifactId>
+            <version>${bndlib.version}</version>
+          </dependency>
+        </dependencies>
+        <configuration>
+          <startLevel>80</startLevel>
+          <aggregateFeatures>true</aggregateFeatures>
+          <ignoreScopeProvided>true</ignoreScopeProvided>
+        </configuration>
       </plugin>
     </plugins>
   </build>
+  <!--<build>-->
+    <!--<plugins>-->
+      <!--<plugin>-->
+        <!--<groupId>org.apache.karaf.tooling</groupId>-->
+        <!--<artifactId>karaf-maven-plugin</artifactId>-->
+        <!--<version>${karaf-maven-plugin.version}</version>-->
+        <!--<extensions>true</extensions>-->
+      <!--</plugin>-->
+    <!--</plugins>-->
+  <!--</build>-->
 </project>
